# aws-cdk-event-bridge-flows

./: README.md  app.py  cdk.context.json  pyproject.toml
configs/: app_configs.json
functions/event_generator/: lambda_function.py
functions/order_processor/: lambda_function.py
functions/order_receiver/: lambda_function.py
functions/order_shipment/: lambda_function.py
infra/: infra_stack.py
infra/services/: api_service.py  event_rule_cloudwatch.py  event_rule_order_delivery.py  event_rule_order_processor.py  event_rule_order_receiver.py  event_rule_order_shipment.py  events_service.py  function_service.py  network_service.py
tests/unit/: test_infra_stack.py
